<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    android:orientation="vertical"
    android:padding="@dimen/padding_dimens_2">

    <android.support.design.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/title_cardView"
        android:layout_marginBottom="@dimen/margin_dimens"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="6dp">

    <LinearLayout
        android:id="@+id/book_info_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_dimens">

        <TextView
            android:id="@+id/book_title_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            tools:text="@string/title_heading"
            android:textSize="@dimen/heading1_text_dimens"
            android:textColor="@color/color_black"/>

        <TextView
            android:id="@+id/booktype_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            tools:text="Hardcover, Paperback, Unknown"
            android:textSize="@dimen/subheading1_text_dimens"
            android:textStyle="italic"
            android:textColor="@android:color/darker_gray"/>

    </LinearLayout>

    </android.support.design.card.MaterialCardView>

    <android.support.design.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_cardView"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="6dp">

    <LinearLayout
        android:id="@+id/supplier_field_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_cardView"
        android:orientation="vertical"
        android:padding="@dimen/padding_dimens">

        <TextView
            android:id="@+id/supplier_name_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            tools:text="@string/supplier_name"
            android:textSize="@dimen/heading1_text_dimens"
            android:textColor="@color/color_black"/>

        <TextView
            android:id="@+id/supplier_phone_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            tools:hint="@string/supplier_phone"
            android:textSize="@dimen/subheading1_text_dimens"
            android:layout_marginTop="@dimen/margin_dimens"
            android:layout_marginBottom="@dimen/margin_dimens"
            android:textStyle="italic"
            android:autoLink="phone"
            android:textColor="@android:color/darker_gray"/>

        <TextView
            android:id="@+id/price_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="$5.00"
            android:gravity="center"
            android:textColor="@color/color_black"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:id="@+id/quantity_title_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qty_details"
                android:textColor="@color/color_black"
                android:layout_marginRight="@dimen/margin_dimens"
                android:layout_marginEnd="@dimen/margin_dimens"
                android:textSize="@dimen/subheading2_text_dimens"/>

            <TextView
                style="@style/QuantityButtons"
                android:id="@+id/subtract_quantity_button"
                android:text="@string/minus_sign"/>

            <TextView
                android:id="@+id/book_quantity_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_dimens"
                android:layout_marginRight="@dimen/padding_dimens"
                tools:text="0"
                android:textColor="@color/color_black"
                android:textSize="@dimen/subheading2_text_dimens"/>

            <TextView
                style="@style/QuantityButtons"
                android:id="@+id/addTo_quantity_button"
                android:text="@string/plus_sign"/>

        </LinearLayout>
    </LinearLayout>
    </android.support.design.card.MaterialCardView>


</RelativeLayout>